welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not found: type YELLOW
	setCouleurBrosse(Color:YELLOW)
                               ^FlowerPot:18: error: not found: type RED
	fleur(Color:RED)
                    ^FlowerPot:20: error: not found: type CYAN
	fleur(Color:CYAN)
                    ^FlowerPot:25: error: not found: type ORANGE
	fleur(Color:ORANGE)
                    ^FlowerPot:30: error: not found: type PINK
	fleur(Color:PINK)
                    ^FlowerPot:32: error: not found: type GREEN
	fleur(Color:GREEN)
                    ^